<resources>
    <string name="app_name">Projet_Dev_Mobile</string>
    <string name="teliod_app">TeLiOd App</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="retour_aux_offres">Retour aux offres</string>
    <string name="s_inscrire"><u>S\'inscrire</u></string>
    <string name="pas_encore_de_compte">Vous n\'avez pas encore de <b>compte</b> ?</string>
    <string name="se_connecter"><b>Se connecter</b></string>
    <string name="mot_de_passe">&#032;Mot de passe</string>
    <string name="login">&#032;Email / numéro de téléphone</string>
    <string name="inscription">Inscription</string>
    <string name="nom">&#032;Nom</string>
    <string name="prenom">&#032;Prénom</string>
    <string name="nationalite">&#032;Nationalité</string>
    <string name="date_de_naissance">&#032;Date de naissance</string>
    <string name="numero_de_telephone">&#032;Numéro de téléphone</string>
    <string name="email">&#032;Email</string>
    <string name="ville">&#032;Ville</string>
    <string name="importer_un_cv">Importer un CV</string>
    <string name="commentaires">&#032;Commentaires</string>
    <string name="code_de_securite">Code de sécurité</string>
    <string name="text_sec_code_send">Vous allez recevoir un code de vérification par <b>mail</b> et/ou par <b>SMS</b></string>
    <string name="valider">Valider</string>
    <string name="no_sec_cod">Vous n\'avez pas reçu de <b>code</b> ?</string>
    <string name="renvoyer_code">Renvoyer</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_accueil">Accueil</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_settings">Paramètres</string>
    <string name="candidatures">Candidatures</string>
    <string name="suivant">Suivant</string>
    <string name="candidat">Candidat</string>
    <string name="employeur">Employeur</string>
    <string name="agence_d_int_rim">Agence d\'intérim</string>
    <string name="gestionnaire">Gestionnaire</string>
    <string name="ok">OK</string>
</resources>