<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projet_dev_mobile.ui.home.HomeFragment"
        android:label="@string/menu_accueil"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profil"
        android:name="com.example.projet_dev_mobile.ui.profil.ProfilFragment"
        android:label="@string/menu_profil"
        tools:layout="@layout/fragment_profil" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.projet_dev_mobile.ui.settings.SettingFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_candidatures"
        android:name="com.example.projet_dev_mobile.ui.candidatures.CandidatureFragement"
        android:label="@string/candidatures"
        tools:layout="@layout/fragment_candidatures" />
</navigation>