<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radio_group_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rb_candidat"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/rb_candidat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/candidat" />

            <RadioButton
                android:id="@+id/rb_employeur"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/employeur" />

            <RadioButton
                android:id="@+id/rb_agence"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/agence_d_int_rim" />

            <RadioButton
                android:id="@+id/rb_gestionnaire"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/gestionnaire" />

        </RadioGroup>

        <Button
            android:id="@+id/dialogue_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>