<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="413dp"
        android:layout_height="53dp"
        android:layout_marginTop="36dp"
        android:background="#DBD2F3"
        android:lineSpacingExtra="8sp"
        android:text="@string/teliod_app"
        android:textAlignment="viewStart"
        android:textColor="#A576DD"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextSizeCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/TitleSecCodeSend"
        android:layout_width="342dp"
        android:layout_height="77dp"
        android:layout_marginTop="12dp"
        android:text="@string/bienvenue"
        android:textAlignment="textStart"
        android:textColor="#C6C6C6"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppTitle"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/ReturnSecCodeSend"
        style="@style/Widget.Material3.Button.TextButton.Snackbar"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#CF93E4"
        android:text="@string/retour_aux_offres"
        android:textColor="#FEFEFE"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <Button
        android:id="@+id/ValidateSecCodeSend"
        style="@style/Widget.Material3.Button.TextButton.Snackbar"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#6750A3"
        android:text="@string/se_connecter"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TextSecCodeSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <Button
        android:id="@+id/SignUpConnexionScreen"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#00404040"
        android:fadingEdge="horizontal|vertical"
        android:text="@string/s_inscrire"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#A576DD"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ReturnSecCodeSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/TextSecCodeSend"
        android:layout_width="236dp"
        android:layout_height="21dp"
        android:layout_marginBottom="8dp"
        android:text="@string/pas_encore_de_compte"
        android:textAlignment="center"
        android:textColor="#AFAFAF"
        app:layout_constraintBottom_toTopOf="@+id/SignUpConnexionScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/PasswordConnectionScreen"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="341dp"
        android:layout_height="52dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/mot_de_passe"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColorHint="#999999"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/ValidateSecCodeSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/CodeSecCodSend"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="341dp"
        android:layout_height="52dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/login"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColorHint="#999999"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/PasswordConnectionScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>