<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="413dp"
        android:layout_height="53dp"
        android:layout_marginTop="36dp"
        android:background="#DBD2F3"
        android:lineSpacingExtra="8sp"
        android:text="@string/teliod_app"
        android:textAlignment="viewStart"
        android:textColor="#A576DD"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextSizeCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/TitleSecCodeSend"
        android:layout_width="342dp"
        android:layout_height="77dp"
        android:layout_marginTop="12dp"
        android:text="@string/inscription"
        android:textAlignment="textStart"
        android:textColor="#C6C6C6"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppTitle"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/ReturnSecCodeSend"
        style="@style/Widget.Material3.Button.TextButton.Snackbar"
        android:layout_width="356dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#CF93E4"
        android:text="@string/retour_aux_offres"
        android:textColor="#FEFEFE"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <Button
        android:id="@+id/ValidateSecCodeSend"
        style="@style/Widget.Material3.Button.TextButton.Snackbar"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#6750A3"
        android:text="@string/s_inscrire"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ReturnSecCodeSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <Button
        android:id="@+id/signUpInscriptionJS"
        style="@style/Widget.Material3.Button.TextButton.Snackbar"
        android:layout_width="338dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#A0A0A0"
        android:text="@string/importer_un_cv"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/CommentairesInscriptionJS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <EditText
        android:id="@+id/CodeSecCodSend"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="340dp"
        android:layout_height="31dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/nom"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColorHint="#999999"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/PrenomIncriptionJS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/PrenomIncriptionJS"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="340dp"
        android:layout_height="31dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/prenom"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColorHint="#999999"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/NationaliteIncriptionJS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/NationaliteIncriptionJS"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="340dp"
        android:layout_height="31dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/nationalite"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColorHint="#999999"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/DateNaissanceIncriptionJS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/DateNaissanceIncriptionJS"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="340dp"
        android:layout_height="31dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/date_de_naissance"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textAlignment="textStart"
        android:textColorHint="#999999"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/NumetoTelephoneIncriptionJS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/NumetoTelephoneIncriptionJS"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="340dp"
        android:layout_height="31dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/numero_de_telephone"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="textStart"
        android:textColorHint="#999999"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/EmailIncriptionJS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EmailIncriptionJS"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="340dp"
        android:layout_height="31dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress"
        android:textAlignment="textStart"
        android:textColorHint="#999999"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/VilleIncriptionJS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/VilleIncriptionJS"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="340dp"
        android:layout_height="31dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/ville"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColorHint="#999999"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/signUpInscriptionJS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/CommentairesInscriptionJS"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="338dp"
        android:layout_height="52dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/commentaires"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColorHint="#999999"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/ValidateSecCodeSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>