<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/ResendSecCodeSend"
        style="@style/Widget.Material3.Button.TextButton.Snackbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="82dp"
        android:backgroundTint="#A0A0A0"
        android:text="@string/renvoyer_code"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/retourOffre_connexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NocodeSecCodeSend"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <TextView
        android:id="@+id/NocodeSecCodeSend"
        android:layout_width="235dp"
        android:layout_height="23dp"
        android:layout_marginBottom="10dp"
        android:text="@string/no_sec_cod"
        android:textAlignment="center"
        android:textColor="#AFAFAF"
        app:layout_constraintBottom_toTopOf="@+id/ResendSecCodeSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscription_button"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="207dp"
        android:background="#DBD2F3"
        android:lineSpacingExtra="8sp"
        android:text="@string/teliod_app"
        android:textAlignment="viewStart"
        android:textColor="#A576DD"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextSizeCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/TitleSecCodeSend"
        android:layout_width="411dp"
        android:layout_height="84dp"
        android:layout_marginTop="65dp"
        android:text="@string/code_de_securite"
        android:textAlignment="textStart"
        android:textColor="#C6C6C6"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/AppTitle"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/retourOffre_connexion"
        style="@style/Widget.Material3.Button.TextButton.Snackbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#CF93E4"
        android:text="@string/retour_aux_offres"
        android:textColor="#FEFEFE"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ResendSecCodeSend"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <Button
        android:id="@+id/inscription_button"
        style="@style/Widget.Material3.Button.TextButton.Snackbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="71dp"
        android:backgroundTint="#6750A3"
        android:text="@string/valider"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/NocodeSecCodeSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nom"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <TextView
        android:id="@+id/TextSecCodeSend"
        android:layout_width="322dp"
        android:layout_height="44dp"
        android:layout_marginBottom="20dp"
        android:text="@string/text_sec_code_send"
        android:textAlignment="center"
        android:textColor="#AFAFAF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/nom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/nom"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/code_de_securite"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColorHint="#999999"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/inscription_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>